# aether

./: .env.example  .env.production.example  .env.swarm.example  .gitignore  Caddyfile  Caddyfile.local  LOCAL_DEVELOPMENT.md  PRODUCTION_DEPLOYMENT.md  README.md  ROUNDTABLE_SUMMARY.md  Requirements.md  V001_REQUIREMENTS.md  caddy.sh  deploy.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  implementation_plan.md  multi-worker-observability-plan.md  pm2-local.sh  transport-rethink-plan.md  voice_session_plan.md
app/: .dockerignore  .gitignore  Dockerfile  README.md  REFACTOR.md  main.py  pyproject.toml  test.py
app/tests/: test_agent_background.py  test_agent_endpoints.py  test_agent_types.py  test_agent_types_advanced.py  test_compaction.py  test_config.py  test_context_builder.py  test_cron_client.py  test_delegation_bridge.py  test_event_bus.py  test_event_bus_advanced.py  test_frames.py  test_gap_fixes.py  test_gemini_session.py  test_kernel_contracts.py  test_memory.py  test_modality_adapters.py  test_nightly_analysis.py  test_notification_fix.py  test_notification_schedule.py  test_providers.py  test_refresh_oauth_token_tool.py  test_remove_skill.py  test_schedule_reminder_tool.py  test_scheduler.py  test_sentence_boundary.py  test_services.py  test_session_api.py  test_session_loop.py  test_session_store.py  test_skills.py  test_sub_agent_manager.py  test_telegram_device.py  (+9 more)
orchestrator/: .air.toml  .dockerignore  CONTRACT.md  Dockerfile  README.md  go.mod  go.sum  pyproject.toml
(+753 files in other folders)
