[project]
name = "aether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "openai>=1.60.0",
    "deepgram-sdk>=5.0.0,<6.0.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
webrtc = ["aiortc>=1.14.0", "av>=12.0.0", "scipy>=1.11.0", "onnxruntime>=1.18.0,<1.24.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether"]
